<resources>
    <string name="app_name">wizeye</string>

    <!--Splash Screen-->
    <string name="splash_screen_caption">BETTER MINITORING STARTS WITH\nBETTER VISUALIZATION</string>

    <!--Login Screen-->
    <string name="login_screen_backgound_image_description">Login Screen Background Image</string>
    <string name="login_screen_wizeye_logo_description">Wizeye Logo</string>
    <string name="login_screen_server_address_input_left_image_description">Server Address</string>
    <string name="login_screen_server_address_input_hint">Server Address</string>
    <string name="login_screen_id_input_left_image_description">ID</string>
    <string name="login_screen_id_input_hint">ID</string>
    <string name="login_screen_password_input_left_image_description">Password</string>
    <string name="login_screen_password_input_hint">Password</string>
    <string name="login_screen_login_button_text">Log In</string>
    <string name="login_screen_login_failed_message">Your Server, ID or Password might be wrong.\nPlease try again.</string>

    <!--Main Screen-->
    <string name="main_screen_name">Main Screen</string>
    <!--Toolbar-->
    <string name="toolbar_action_more_popup_menu_action_about">About</string>
    <string name="toolbar_action_more_popup_menu_action_logout">Log Out</string>

    <!--Map Item-->
    <string name="map_item_ic_location_image_description">Location Icon</string>
    <string name="map_item_ic_next_image_description">Next Icon</string>

    <!--Map Detail Screen-->
    <string name="map_detail_screen_name">Map Detail Screen</string>

    <!--Alert Screen-->
    <string name="alert_default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="alert_default_notification_channel_name" translatable="true">Wizeye Alert</string>
    <string name="alert_default_notification_title">Wizeye Notification</string>
    <string name="alert_default_notification_body">New Wizeye Alert</string>

    <!--Video Item-->
    <string name="video_item_ic_location_image_description">Location Icon</string>
    <string name="video_item_ic_next_image_description">Next Icon</string>

    <!--Video Detail Screen-->
    <string name="video_detail_screen_name">CCTV Detail Screen</string>
    <string name="video_detail_screen_ic_back_content_description">Back Icon</string>
    <string name="video_detail_screen_action_back_title">BACK TO CCTV LIST</string>
    <string name="video_detail_screen_video_could_not_load_message">Could not load video!</string>
    <string name="video_detail_screen_empty_name_description">Empty</string>

    <!--About Screen-->
    <string name="about_screen_ic_back_content_description">Back Icon</string>
    <string name="about_screen_action_back_title">BACK</string>
    <string name="about_screen_action_back_to_title">BACK TO %1$s</string>
    <string name="about_screen_app_name_mockup">Wizeye App</string>
    <string name="about_screen_app_version_mockup">VERSION 1.1</string>
    <string name="about_screen_app_description_mockup">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
        has been the industry\'s standard dummy text ever since the 1500s, when an unknown
        printer took a galley of type and scrambled it to make a type specimen book. It has
        survived not only five centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged. It was popularised in the 1960s with the release of
        Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
        publishing software like Aldus PageMaker including versions of Lorem Ipsum.
    </string>
    <string name="about_screen_app_link_mockup">http://hana-collabo.wizeye.io/</string>

    <!--Bottom Navigation View-->
    <string name="title_map">Map</string>
    <string name="title_alert_list">Alert List</string>
    <string name="title_chart_graph">Chart/Graph</string>
    <string name="title_video">Video</string>
</resources>
